examples/test/testpolicy408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy408
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
      podSelector:
        matchLabels:
          key2: value25
          key24: value32
          key16: value49
